# ioniq

./: .gitignore  LICENSE  README.md  api_reference.html  core.html  cparsers.html  data_input.html  datatypes.html  event_detect.html  genindex.html  getting_started.html  index.html  install_beginner.html  installation.html  io.html  ioniq.html  ionique_starter.html  modules.html  objects.inv  parsers.html  py-modindex.html  pyproject.toml  python_vscode_start.html  requirements.txt  search.html  searchindex.js  setup.py  setup_log.html  signal_analysis.html  signal_preprocess.html  tutorial.html  userguide.md  utils.html
IonTrace/: cusum2.py
PythIon/: MainApp.py  Pythion.py  __init__.py  filterkit.py  filterkitwidget.py  flowcharts.py  peaktoolkit.py  peaktoolkitwidget.py  plotguiuniversal.py  theme.py  utils.py
PythIon.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
_sources/: data_input.rst.txt  modules.rst.txt  signal_preprocess.rst.txt
api/: core.html  cparsers.html  datatypes.html  io.html  parsers.html  utils.html
docs/: api_reference.rst  conf.py  datatypes.rst  event_detect.html  index.rst  install_beginner.rst  installation.html  installation.rst  io.html  ioniq.html  ioniq.rst  ioniq_starter.md  ionique_starter.md  modules.rst  objects.inv  py-modindex.html  python_vscode_start.md  search.html  setup_log.rst  signal_preprocess.rst  utils.rst
notebooks/: ioniq_demo_copy_inline.ipynb  ioniq_demo_p2.ipynb  ioniq_demo_qt.ipynb
src/: cparsers.pyx  datatypes.py  io.py  parsers.py  utils.py
tests/: testDummy.py  testGuiBasic.py  testTrace.py  test_core.py  test_datatypes.py  test_io.py  test_parsers.py  test_utils.py
v0.3.0/: .buildinfo  api_reference.html  data_input.html  event_detect.html  genindex.html  getting_started.html  index.html  installation.html  ioniq.html  ionique_starter.html  py-modindex.html  python_vscode_start.html  search.html  searchindex.js  setup_log.html  (+2 more)
(+225 files in other folders)
