[build-system]
requires = ["setuptools", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "ioniq"
version = "0.1.0"
description = "A modular nanopore data analysis package."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "Ali Fallahi", email = "fallahi.a@northeastern.edu"}]

dependencies = [
  "numpy~=2.1.1",
  "Cython~=3.0.11",
  "pytz~=2024.1",
  "scipy~=1.14.1",
  "platformdirs~=4.2.2",
  "pyabf~=2.3.8"

]

[project.optional-dependencies]
panel = ["panel"]
