[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "ionique"

dynamic = ["version"]
description = "A modular nanopore data analysis package."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Ali Fallahi", email = "fallahi.a@northeastern.edu"}]
dependencies = [
  "numpy>=2.0",
  "Cython>=3.0.11",
  "pytz~=2024.1",
  "scipy>=1.14.1",
  "platformdirs~=4.2.2",
  "pyabf>=2.3.8",
  "pandas>=2.0"

]


[project.optional-dependencies]
panel = ["panel"]

[tool.setuptools_scm]
write_to = "src/ionique/_version.py"
